--- a/css/index.css
+++ b/css/index.css
@@ -20,7 +20,19 @@ body{
     font-size:18px;
 }
 
-.inputs{
+
+
+.input{
+    border-radius: 5px;
+    font-family: sans-serif;
+    border:1px solid white;
+    font-size:18px;
+    text-align: center;
+    
+}
+
+
+/*.inputs{
     
     position:relative;
     left:50%;
@@ -29,7 +41,56 @@ body{
     height:35px;
     background-color: white;
     border-radius: 7px;
+  */
+
+  /*.input{
+    border-radius: 5px;
+    font-family: sans-serif;
+    border:1px solid white;
+    left:50%;
+    transform: translate(-50%);
+    font-size:18px;
+    text-align: center;
+    position:absolute;
+    top:5px;
+
+} */
+
+.padreInput_js{
+    display: flex;
+    background-color: white;
+    width:400px;
+    height: 35px;
+    border-radius: 5px;
+    align-items: center;
+    margin-top:15px;
+
+}
+
+.inputVictimas_js{
+    border:none;
+    background-color: transparent;
+    font-size:18px;
+    color:#D9B5AE;
+    flex-grow: 8;
+    text-align: center;
+    padding-left:15%;
+
+}
+
+.editar_js{
+    width: 18px;
+    padding-right: 15px;
+    flex-grow: 1;
+    flex-basis: 0;
     
+}
+
+.eliminar_js{
+    width: 18px;
+    flex-grow: 1;
+    flex-basis: 0;
+    padding-right: 15px;
 }
 
 .editar{
@@ -54,18 +115,7 @@ body{
     
 }
 
-.input{
-    border-radius: 5px;
-    font-family: sans-serif;
-    border:1px solid white;
-    left:50%;
-    transform: translate(-50%);
-    font-size:18px;
-    text-align: center;
-    position:absolute;
-    top:5px;
 
-}
 
 .victimasContainer{
 display:flex !important;
@@ -77,6 +127,7 @@ align-items: center;
 .divVictimas{
     display:flex !important;
     flex-direction: column;
+    align-items: center;
     border-radius: 5px;
     font-family: sans-serif;
     margin-bottom:15px;
@@ -114,59 +165,67 @@ align-items: center;
    
 }*/
 
+.input_nombre {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 28%;
+    margin: auto;
+}
+
 .boton_anadir{
-    border:2px solid #FFF;
-    position:absolute;
-    background-color: transparent;
-    top:30px;
+    border:none;
+    background-color: #8F4282;
     color:white;
     font-family: sans-serif;
     margin-top:25px;
     border-radius: 5px;
-    width: 400px;
     height: 38px;
-    padding-left:2%;
     font-size:18px;
 }
-
-.input, .boton_anadir{
-    box-sizing: border-box;
-    background-color: transparent;
-}
-
-
-
-input:focus{
-    border: none;
-    outline: none;
-}
-
 
 .boton_anadir:hover{
     border: none;
     outline: none;
+    color:white;
     background-color: #8F4282;
+}
+
+.input{
+    box-sizing: border-box;
+    background-color: white;
+    height:35px;
+    color:gray;
+}
+
+
+input:focus{
+    border: #8F4282;
+    outline: none;
+    color:gray;
+}
+
+
+.boton_anadir:hover{
+    border: 2px solid white;  
 }
 
 .boton_sorteo{
     
         border:none;
-        position:absolute;
         background-color: #5D495A;
-        top:120px;
         color:white;
         font-family: sans-serif;
         margin-top:25px;
         border-radius: 5px;
-        width: 400px;
         height: 38px;
-        padding-left:2%;
         font-size:18px;
 
 }
 
 .boton_sorteo:hover{
     background-color: #8F4282;
+    border: 2px solid white;
 }
 
 
@@ -217,34 +276,25 @@ input:focus{
         line-height: 1.5;
     }
 
-    .inputs{
-        width:200px;
+    
+    .input_nombre{
+        width:70%;
     }
 
-.input_nombre{
-    position:flex;
-}
-
-    .input {
-        background-color: transparent;
-        border:none;
-        left:70%;
-        
+    .padreInput_js{
+        width:70%;
     }
 
-    .boton_anadir{
-        width:200px;
-        top:30px;
-        position:absolute;
+    .inputVictimas_js{
+        width:65%;
     }
 
-    .boton_sorteo{
-        width:200px;
-        top:120px;
-        position:absolute;
-    }
 
     .organic-shape, .organic-shape2{
         display:none;
-    }
+    
   }
+
+
+
+}
